Changed config params to global role properties.  Code cleanup.